多言語対応

--- a/src/content/blog/ja/1755806437530-僕がActivityPubを始めた理由.mdx
+++ b/src/content/blog/ja/1755806437530-僕がActivityPubを始めた理由.mdx
@@ -6,7 +6,7 @@ description: "ActivityPubを知った経緯やapkit/Kaguraなどの話を。"
 tags: ["activitypub", "fediverse", "apkit", "apsig", "apmodel", "apfetch"]
 ---
 
-import Link from '../../shortcodes/Link.astro';
+import Link from '../../../shortcodes/Link.astro';
 
 殆どapkitの話です。ごめんね
 
