--- a/src/content/blog/ja/meilisearch-japanese-build.mdx
+++ b/src/content/blog/ja/meilisearch-japanese-build.mdx
@@ -7,8 +7,8 @@ tags:
   - misskey
   - meilisearch
 ---
-import Link from '../../shortcodes/Link.astro';
-import GitHub from '../../shortcodes/GitHub.astro';
+import Link from '../../../shortcodes/Link.astro';
+import GitHub from '../../../shortcodes/GitHub.astro';
 
 体感ではそんな印象はないけど気になるので入れ替えてみる。
 ### Docker
