--- a/src/content/blog/ja/misskey-calendar-2024.mdx
+++ b/src/content/blog/ja/misskey-calendar-2024.mdx
@@ -6,9 +6,9 @@ draft: false
 tags:
   - Tech
 ---
-import Link from '../../shortcodes/Link.astro';
-import GitHub from '../../shortcodes/GitHub.astro';
-import Advantar from '../../shortcodes/Advantar.astro';
+import Link from '../../../shortcodes/Link.astro';
+import GitHub from '../../../shortcodes/GitHub.astro';
+import Advantar from '../../../shortcodes/Advantar.astro';
 
 > この記事は[Misskey Advent Calendar 2024](https://adventar.org/calendars/10208) 21日目の記事です
 > 
