--- a/src/content/blog/ja/post-1.mdx
+++ b/src/content/blog/ja/post-1.mdx
@@ -7,8 +7,8 @@ thumbnail: 'https://docs.astro.build/assets/full-logo-light.png'
 tags: ["astro", "ブログ", "公開学習"]
 license: CC0
 ---
-import Link from '../../shortcodes/Link.astro'
-import Misskey from '../../shortcodes/Misskey.astro'
+import Link from '../../../shortcodes/Link.astro'
+import Misskey from '../../../shortcodes/Misskey.astro'
 
 Astroの学習についての私の _新しいブログ_ へようこそ！ここでは、新しいウェブサイトを作りながら、私の学習過程を共有します。
 
