--- a/src/content/blog/en/why-dont-recommend-implement-activitypub.mdx
+++ b/src/content/blog/en/why-dont-recommend-implement-activitypub.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why don't recommend to implement ActivityPub from scratch
-description: ActivityPubをゼロから実装することがなぜ推奨されないのか、その技術的な理由と代替案について解説します。
+description: "Why ActivityPub is hard to implement: scaling issues, unclear specs, and protocol gaps."
 createdAt: 2025-12-10
 draft: false
 tags:
